[package]
name = "wasm4_snake"
authors = ["Pascal Ruscher <ruscher.pascal@gmail.com>"]
keywords = ["game", "wasm-4"]
categories = ["games"]
description = "A snake clone game using WASM-4 engine"
version = "1.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
