[package]
name = "wasm4_snake"
authors = ["Pascal Ruscher <ruscher.pascal@gmail.com>"]
keywords = ["game", "wasm-4"]
categories = ["games"]
description = "A snake clone game using WASM-4 engine"
version = "1.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
wasm-bindgen = "0.2"
buddy-alloc = { version = "0.4.1", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
