[package]
name = "wasm4_snake"
authors = ["Pascal Ruscher <ruscher.pascal@gmail.com>"]
keywords = ["game", "wasm-4"]
categories = ["games"]
description = "A snake clone game using WASM-4 engine"
version = "1.0.1"
edition = "2021"
publish = false
repository = "https://github.com/pascalruscher/wasm4_snake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
